Data Mapper spacing corrected

--- a/dataMapperLatest/style.css
+++ b/dataMapperLatest/style.css
@@ -234,7 +234,7 @@ a{
 	background: linear-gradient(#fefefe, #f7f7f7);
 }
 .activityBox .upperSection{
-	padding: 10px 9px 11px 18px;
+	padding: 10px 9px 10px 18px;
 	border-bottom: 1px solid #d4d4d4;
 	background: linear-gradient(#fefefe, #f7f7f7);
 } 
@@ -639,6 +639,8 @@ display: block;
 }
 .activityBox .rightActivity{
 	float: right;
+    font-size: 14px;
+    line-height: 16px;
 }
 .comment{
 
@@ -725,4 +727,15 @@ display: block;
 }
 .activityBox .middle a{
 	display: block;
+}
+.activityBox .topBox{
+    padding: 16px 20px 16px 20px;
+}
+
+.activityBox .middle{
+    padding: 15px 20px 15px 20px;
+}
+
+.activityBox .lastBox{
+    padding: 25px 20px 24px 20px;
 }
